# aa-parser

./: .gitignore  adobe-analytics-parser-v1-overview.md
app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/src/: App.tsx  api.ts  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs  models.rs  state.rs
app/src-tauri/src/commands/: mod.rs
app/src-tauri/src/parser/: csv_parser.rs  header_mapper.rs  mod.rs  normalizer.rs  xlsx_parser.rs
app/src-tauri/src/query/: search.rs
