[package]
name = "aa-parser"
version = "0.1.0"
edition = "2021"
default-run = "aa-parser"

[lib]
name = "aa_parser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-dialog = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
calamine = "0.26"
url = "2.5"
anyhow = "1"
thiserror = "2"
once_cell = "1"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
